exports[`no-duplicate-enum-values > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-duplicate-enum-values",
      "messageId": "duplicateValue",
      "message": "Duplicate enum member value 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 8
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-duplicate-enum-values > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-duplicate-enum-values",
      "messageId": "duplicateValue",
      "message": "Duplicate enum member value A.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-duplicate-enum-values > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-duplicate-enum-values",
      "messageId": "duplicateValue",
      "message": "Duplicate enum member value A.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 10
        }
      }
    },
    {
      "ruleName": "no-duplicate-enum-values",
      "messageId": "duplicateValue",
      "message": "Duplicate enum member value 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 3
        },
        "end": {
          "line": 6,
          "column": 8
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-duplicate-enum-values > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-duplicate-enum-values",
      "messageId": "duplicateValue",
      "message": "Duplicate enum member value A.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-duplicate-enum-values > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-duplicate-enum-values",
      "messageId": "duplicateValue",
      "message": "Duplicate enum member value A.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;
